--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "name": "giphy",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "npm": "6.14.6",
+    "node": "12.18.3"
+  },
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
